# phase-field

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
registration/: PREREGISTRATION.md  sigma_pred.json
results/: primary_cell.json  robustness.json  sensitivity_grid.json
scripts/: dryrun.py  fetch_data.py  make_figures.py  robustness.py  run_pipeline.py
src/coherence/: __init__.py  loaders.py  nulls.py  propagate.py  radii.py  ratios.py  scales.py  synthetic.py  threshold.py
tests/: test_nulls.py  test_pipeline.py  test_radii.py  test_ratios.py  test_scales.py  test_threshold.py
